html styled and card template made

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
   <!-- SECTION -->
   <header>
-    <nav class="navbar navbar-dark navbar-expand bg-dark text-light px-2">
-      <a class="navbar-brand" href="#">
+    <!-- <nav class="navbar navbar-dark navbar-expand bg-dark text-light px-2"> -->
+    <!-- <a class="navbar-brand" href="#">
         <img src="https://codeworks.blob.core.windows.net/public/assets/img/cw-mark.png" height="45" alt=""
           loading="lazy">
         <span class="ml-2">vendr</span>
@@ -30,12 +30,28 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <!-- NAVLINKS -->
+          NAVLINKS
           <a href="#/about" class="nav-link">About</a>
         </div>
       </div>
-      <div class="flex-grow-1 justify-content-end align-items-center d-flex" id="authstate"></div>
-    </nav>
+      <div class="flex-grow-1 justify-content-end align-items-center d-flex" id="authstate"></div> -->
+    <div class="container-fluid bg-dark">
+      <div class="row">
+        <div class="col-12 d-flex justify-content-between align-items-center">
+          <h1 class="text-light m-2">
+            Vendr
+          </h1>
+          <div></div>
+          <div></div>
+          <h3 class="my-2 ms-5 text-light">Balance : Broke</h3>
+          <button class="btn btn-primary rounded-2 m-2">Insert Quarter</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- </nav> -->
+
+
   </header>
 
   <!-- SECTION -->
@@ -45,6 +61,23 @@
       <!-- primary viewport -->
     </section>
 
+
+
+
+    <section>
+      <div class="container">
+        <div class="row" id="items-area">
+          <div class="col-12 col-md-4 d-flex flex-column align-content-center justify-content-center bg-secondary">
+            <h4 class="text-center my-2">Dr.Pepper</h4>
+            <img
+              src="https://i5.walmartimages.com/seo/Dr-Pepper-Soda-Pop-20-fl-oz-Bottle_c1bd00b2-50a3-44ce-bb27-04177224fbd6.25a6500f2249f58f1fbd5909f2a264f7.jpeg"
+              alt="Dr.Pepper" class="img-fluid my-2">
+            </img>
+            <button class="btn btn-primary my-2 mx-5">$1.25</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- SECTION -->
