made the buttons add the item clicked on to the active item section

--- a/index.html
+++ b/index.html
@@ -66,17 +66,13 @@
 
     <section>
       <div class="container">
-        <div class="row" id="items-area">
-          <div class="col-12 col-md-4 d-flex flex-column align-content-center justify-content-center bg-secondary">
-            <h4 class="text-center my-2">Dr.Pepper</h4>
-            <img
-              src="https://i5.walmartimages.com/seo/Dr-Pepper-Soda-Pop-20-fl-oz-Bottle_c1bd00b2-50a3-44ce-bb27-04177224fbd6.25a6500f2249f58f1fbd5909f2a264f7.jpeg"
-              alt="Dr.Pepper" class="img-fluid my-2">
-            </img>
-            <button class="btn btn-primary my-2 mx-5">$1.25</button>
-          </div>
+        <div class="row" id="itemsArea">
+
         </div>
       </div>
+    </section>
+    <section id="activeItemImg">
+
     </section>
   </main>
 
