added money you can add quarters and now money is taken on purchase

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
           </h1>
           <div></div>
           <div></div>
-          <h3 class="my-2 ms-5 text-light">Balance : Broke</h3>
-          <button class="btn btn-primary rounded-2 m-2">Insert Quarter</button>
+          <h3 class="my-2 ms-5 text-light" id="balanceLabel">Balance : Broke</h3>
+          <button onclick="app.MoneyController.insertQuarter()" class="btn btn-primary rounded-2 m-2">Insert
+            Quarter</button>
         </div>
       </div>
     </div>
