--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
       </div>
     </section>
-    <section id="activeItemImg">
+    <section id="activeItemImg" class="d-flex align-items-center justify-content-center">
 
     </section>
   </main>
